# informative-path-planning-toolkit

./: .gitignore  README.md  conda_env.yml  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
data/: .gitignore
data/maps/: .gitignore  coral.dvc  safeforest.dvc
dev/data/: coral.py  domain_data.ipynb  domain_data.py  gaussian_blob_2d.py  planetary_computer.ipynb  random_2d.ipynb  reading-stac.ipynb  reading-stac.py  stac_image.py
dev/experiment/: abstract_agent_run.py  aifsg_experiments.py  analyze_sweep.py  bias_variance.py  iterative_diversity_based_learning.py  mcts.py  noisy_sensor.py  param_sweep.py  parameter_sweep.py  simple.py  simple_gym.py  stable_baseline.py  thesis_exp.py
dev/planners/: data_predictor_planner_sweep.py  diversity_importance_planner.py  diversity_ipp.py  entropy_reduction_planners.py  entropy_sampler.py  mutual_info_planner.py  planning_on_different_data.py  random_planner.py
dev/predictors/: GaussianProcess.ipynb  ensemble.ipynb  ensemble.py
dev/sensors/: sensors.py
dev/train/: abstract_agent_train.py
dev/world_models/: Simple_GP_Regression.py  gaussian_process.py  gp_class_example.py
examples/: different_planners.ipynb  different_planners_quantitative_evaluation.ipynb  ensambled_predictions.ipynb  gaussian_process_prediction.ipynb  uncertain_predictions.ipynb  visualize_domain_data.ipynb
gym-ipp/: setup.py
gym-ipp/gym_ipp/: __init__.py
informative_path_planning_toolkit/: config.py
informative_path_planning_toolkit/data/: data.py  random_2d.py  (+3 more)
ipp_toolkit/: config.py
tests/: test_data.py  test_informative_path_planning_toolkit.py
(+103 files in other folders)
