[tool.poetry]
name = "informative-path-planning-toolkit"
version = "0.1.0"
description = "A general framework for informative path planning experiments, with a focus on wrapping datasets, sensors, planners, and visualization in a modular manner"
authors = ["David Russell <davidrussell327@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.0"
matplotlib = "^3.5.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
