[tool.poetry]
name = "ipp-toolkit"
version = "0.1.1"
description = "A general framework for informative path planning experiments, with a focus on wrapping datasets, sensors, planners, and visualization in a modular manner"
authors = ["David Russell <davidrussell327@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.0"
matplotlib = "^3.5.3"
ubelt = "^1.2.1"
sacred = {extras = ["mongodb"], version = "^0.8.2"}
pymongo = "^4.2.0"
python-tsp = "^0.3.1"
scikit-image = "^0.19.3"
imagecodecs = "^2022.9.26"
platypus-opt = "^1.1.0"
imitation = "^0.3.2"
pystac = "^1.6.1"
planetary-computer = "^0.4.9"
rioxarray = "^0.13.3"
ipykernel = "^6.20.1"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
dvc = {extras = ["gdrive"], version = "^2.34.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
